<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <!-- Gender -->
    <LinearLayout
        android:id="@+id/gender_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/gender"
            android:text="@string/gender_label" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/gender_female"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/gender_label"
            app:layout_constraintTop_toTopOf="@+id/gender_label">

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />
        </RadioGroup>
    </LinearLayout>

    <!-- Weight -->
    <LinearLayout
        android:id="@+id/weight_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/gender_box">

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/weight"
            android:text="@string/weight_label" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/weight_label" />

        <TextView
            android:id="@+id/weight_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_units"
            app:layout_constraintStart_toEndOf="@+id/weight" />
    </LinearLayout>

    <!-- Height -->
    <LinearLayout
        android:id="@+id/height_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/weight_box">

        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/height"
            android:text="@string/height_label" />

        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/height_label" />

        <TextView
            android:id="@+id/height_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_units"
            app:layout_constraintStart_toEndOf="@+id/height" />
    </LinearLayout>

    <!-- Age -->
    <LinearLayout
        android:id="@+id/age_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/height_box">

        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/age"
            android:text="@string/age_label" />

        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/age_label" />

        <TextView
            android:id="@+id/age_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_units"
            app:layout_constraintStart_toEndOf="@+id/height" />
    </LinearLayout>

    <!-- Activity -->
    <LinearLayout
        android:id="@+id/activity_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/age_box">

        <TextView
            android:id="@+id/activity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/activity"
            android:text="@string/activity_label" />

        <RadioGroup
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/activity_base"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/activity_label"
            app:layout_constraintTop_toTopOf="@+id/activity_label">

            <RadioButton
                android:id="@+id/activity_slow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_slow" />

            <RadioButton
                android:id="@+id/activity_base"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_base" />

            <RadioButton
                android:id="@+id/activity_superman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_superman" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_result"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_box" />

    <TextView
        android:id="@+id/calories_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_result"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit"/>


</android.support.constraint.ConstraintLayout>